fix: fix alert overlap width in small screens

--- a/pages/components/alert/alert.css
+++ b/pages/components/alert/alert.css
@@ -9,7 +9,6 @@
   padding: 1rem;
   margin: 1rem 0;
   border-radius: 10px;
-  width: max-content;
 }
 
 /* Standard Alert */
